@@ -1,5 +1,9 @@
 2005-11-28 Konstantin Triger <kostat@mainsoft.com>
 
+        * SystemIcons.jvm.cs: refactoring.
+
+2005-11-28 Konstantin Triger <kostat@mainsoft.com>
+
 	* Icon.cs: TARGET_JVM changes.
 
 2005-11-17 Vladimir Krasnov <vladimirk@mainsoft.com>
